Add OpenApi and log authimplservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,9 @@ springjwt.app.jwtRefreshExpirationMs=86400000
 
 app.file.storage.mapping=/static
 
+springdoc.api-docs.path=/api-docs
+
+booking.openapi.dev-url=http://localhost:8080
+booking.openapi.prod-url=https://booking.sanedge.com
+
 logging.level.org.springframework.security=DEBUG
